# Teaxs-Holdem-Poker

./: CMakeLists.txt  README.md  bot.cpp  bot.h  cards.cpp  cards.h  dealer.cpp  dealer.h  main.cpp  player.cpp  player.h  startup.cpp  startup.h
